<resources>
    <string name="app_name">Ejercicio2</string>
    <string name="importe">Importe</string>
    <string name="convertir">Convertir</string>
    <string name="resultado">Resultado</string>
    <string name="libras">Libras</string>
    <string name="euros">Euros</string>
    <string name="euros2">Euros</string>
    <string name="libras2">Libras</string>
    <string name="dolares">Dolares</string>
    <string name="dolares2">Dolares</string>
</resources>